styles/globals.css
/* ... */
.text-column__image {
  margin-left: auto;
  margin-right: auto;
}

.text-column__button-row {
  margin-top: 1em;
}

.text-column__button-row--link {
  margin-top: 0.5em;
}
.text-column__title + .text-column__button-row--link {
  margin-top: -0.1em;
}

.button-row {
  margin: calc(2rem - 10px) -0.5em 0;
}
.button-row .button-row__button {
  margin: 10px 0.5em 0;
}

.lightly-styled-select {
  display: block;
  box-sizing: border-box;
  height: 41px;
  overflow: hidden;
  position: relative;
  background: #ffffff;
  border: 1px solid rgb(219, 220, 220);
  border-radius: 3px;
}
.lightly-styled-select:hover {
  border-color: rgb(176, 177, 178);
}
.lightly-styled-select::after {
  pointer-events: none;
  content: '';
  position: absolute;
  right: 0px;
  top: 0px;
  width: 28px;
  height: 100%;
  background-image: url("data:image/svg+xml,%3Csvg fill='rgb(112, 113, 115)' height='18' width='18' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z'/%3E%3Cpath d='M0-.75h24v24H0z' fill='none'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: 1px center;
  background-color: #ffffff;
}
.lightly-styled-select select {
  background: transparent !important;
  color: #707173;
  border: none !important;
  font-size: 15px !important;
  height: 100% !important;
  line-height: 39px !important;
  padding: 0 30px 0 15px !important;
  /* If you add too much padding here, the options won't show in IE */
  width: 268px !important;
  width: calc(100% + 28px) !important;
  max-width: none !important;
  -webkit-appearance: none;
  appearance: none;
}
@media (max-width: 767.98px) {
  .lightly-styled-select select {
    font-size: 16px !important;
  }
}

.product-swatch-inline__dot {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  margin: 6px 1px 0;
  box-shadow: inset 0 3px 3px -2px rgba(0, 0, 0, 0.25);
}

.variant-option-title::before {
  content: '- ';
}

.responsive-table {
  width: 100%;
}
.responsive-table .responsive-table__cell-label,
.responsive-table .responsive-table__cell-head__icon,
.responsive-table .responsive-table__more {
  display: none;
}
@media (max-width: 767.98px) {
  .responsive-table {
    display: block;
    width: auto;
    margin-left: -16px;
    margin-right: -16px;
    border-top: 1px solid #e2e2e2;
  }
  .responsive-table thead {
    display: none;
  }
  .responsive-table tbody,
  .responsive-table tr,
  .responsive-table td {
    display: block;
  }
  .responsive-table tr {
    border-bottom: 1px solid #e2e2e2;
  }
  .responsive-table td {
    display: none;
    border: none;
    padding: 0 16px;
    background: #ebebeb;
    color: #171717;
  }
  .responsive-table td.responsive-table__first-mobile-cell {
    padding-top: 16px;
  }
  .responsive-table td:last-child {
    padding-bottom: 16px;
  }
  .responsive-table .responsive-table__cell-head {
    display: block;
    cursor: pointer;
    position: relative;
    padding-top: 16px;
    padding-bottom: 16px;
    padding-right: 50px;
    background: #ffffff;
  }
  .responsive-table .responsive-table__cell-head a {
    color: inherit;
  }
  .responsive-table .responsive-table__cell-head__icon {
    display: block;
    position: absolute;
    top: 16px;
    right: 16px;
  }
  .responsive-table .responsive-table__cell-label {
    display: inline;
    font-weight: bold;
  }
  .responsive-table .responsive-table__cell-label:after {
    content: ':';
  }
  .responsive-table .responsive-table__more {
    display: block;
    margin-top: 1em;
  }
  .responsive-table .desktop-only {
    display: none !important;
  }
  .responsive-table .expanded .responsive-table__cell-head__icon {
    transform: rotate(90deg);
  }
  .responsive-table .expanded td {
    display: block;
  }
}

.flexible-layout,
.fixed-layout {
  margin-left: -30px;
  margin-bottom: -30px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: space-evenly;
}
.flexible-layout.valign-middle > .column,
.fixed-layout.valign-middle > .column {
  align-self: center;
}
.flexible-layout.valign-bottom > .column,
.fixed-layout.valign-bottom > .column {
  align-self: flex-end;
}
.flexible-layout .column,
.fixed-layout .column {
  padding-left: 30px;
  margin-bottom: 30px;
  flex: 0 0 auto;
}
.flexible-layout .column--quarter,
.fixed-layout .column--quarter {
  width: 25%;
}
.flexible-layout .column--third,
.fixed-layout .column--third {
  width: 33.333%;
}
.flexible-layout .column--half,
.fixed-layout .column--half {
  width: 50%;
}
.flexible-layout .column--two-thirds,
.fixed-layout .column--two-thirds {
  width: 66.666%;
}
.flexible-layout .column--three-quarters,
.fixed-layout .column--three-quarters {
  width: 75%;
}
.flexible-layout .column--full,
.fixed-layout .column--full {
  width: 100%;
}

.flexible-layout--align-center {
  justify-content: center;
}

.flexible-layout--variable-columns {
  justify-content: space-around;
}
.flexible-layout--variable-columns .column {
  flex: 1 0 auto;
  width: 33%;
  max-width: 50%;
}
.flexible-layout--variable-columns.flexible-layout--columns-4 .column {
  width: 50%;
}

.flexible-layout--form {
  margin-bottom: 0;
}
.flexible-layout--form .column {
  margin-bottom: 20px;
}

@media (min-width: 1300px) {
  .fixed-layout--no-wide-gutter {
    margin-left: -20px;
  }
  .fixed-layout--no-wide-gutter .column {
    padding-left: 20px;
  }
}
/* ... */

